:last-update-label!:

= History

== 6.0.0
=== breaking changes
* Re-organized directory strucure respect to boost libraries.
** It affects the users only if include the specific header file directly.
* Re-desined strand handling. #206
** template parameter Strand is removed. Users can pass strand wrapped executor for multi threading.
** associated properties of the completion handler are correctly propagated.
* Removed buffer from packet interface except the infterface for adcanced user. #195
** For example, create PUBLISH packet using "topic1", and get the filed as string by `topic()`.
*** No `allocate_buffer("topic1")` is required.
* Organized predefined headers. #194
** For mqtt, include `async_mqtt/all.hpp`. In addition,
** For mqtts, include `async_mqtt/predefined_layer/mqtts.hpp`
** For ws, include `async_mqtt/predefined_layer/ws.hpp`
** For wss, include `async_mqtt/predefined_layer/wss.hpp`

=== other updates
* Used bound allocator to allocate buffer for packet on receive. #222
* Added convenient handshaking function for underlying layers. #216
** TCP, TLS, Websocket, Websocket on TLS are handshaked by one function call.
* Refined documents. #220, #222
* Refined examples. #214, #220

== 5.1.2
* Refined custom underlying layer support. #190, #191, #193

== 5.1.1
* Added client's infinity timer cancelling without data arrival support. #185
* Modified client::get_executor() return value.#184

== 5.1.0
* Added tests. #180
* Added high level MQTT client APIs support. #178

== 5.0.0

=== breaking changes
* Removed core sub directory and move file to upper directory. #158
* Added null strand support. #153, #160, #161
** Note: If you are't using `basic_endpoint` directly, using only `endpoint`, no actions are required.

==== broker
* Renamed from "groups" to "group" for auth.json. #171

=== other updates
* Added bulk packet writing functionality. #169, #170
* Fixed unused variable in release build. #167