@@ -89,6 +89,7 @@ endif()
 foreach(source_file ${check_PROGRAMS})
     get_filename_component(source_file_we ${source_file} NAME_WE)
     add_executable(${source_file_we} ${source_file})
+    target_include_directories(${source_file_we} PRIVATE ../../tool/include)
     if(${source_file} MATCHES "ut_packet_v.*")
         message(STATUS ${source_file})
         target_compile_definitions(${source_file_we} PUBLIC ASYNC_MQTT_UNIT_TEST_FOR_PACKET)
