@@ -1,3 +1,3 @@
 #!/bin/sh
 
-curl https://raw.githubusercontent.com/okdshin/PicoSHA2/master/picosha2.h > include/async_mqtt/external/picosha2.h
+curl https://raw.githubusercontent.com/okdshin/PicoSHA2/master/picosha2.h > tool/include/broker/external/picosha2.h
